Moved transpiler to the tools folder

--- a/sample/index.html
+++ b/sample/index.html
@@ -4,7 +4,7 @@
         <title>Bosonic Sample</title>
         <meta charset="utf-8">
         <script type="text/javascript" src="../node_modules/webcomponents.js/webcomponents.js"></script>
-        <script type="text/javascript" src="../src/runtime/register.js"></script>
+        <script type="text/javascript" src="../dist/bosonic-runtime.js"></script>
 
         <link rel="import" href="tick-tock-clock.html">
     </head>
