Events are CustomAttributes are now mixed in by default

--- a/sample/test-elements/custom-attributes.html
+++ b/sample/test-elements/custom-attributes.html
@@ -1,7 +1,5 @@
 <element name="custom-attributes">
     <script>
-    Bosonic.register({
-        mixins: [Bosonic.CustomAttributes]
-    });
+    Bosonic.register({});
     </script>
 </element>
