Rewrote events mixin for better maintenability & extensibility

--- a/sample/gestures.html
+++ b/sample/gestures.html
@@ -27,8 +27,8 @@
                 Bosonic.register({
                     listeners: {
                         'tap': 'handleGesture',
-                        'hold': 'handleGesture',
-                        'track': 'handleGesture'
+                        // 'hold': 'handleGesture',
+                        // 'track': 'handleGesture'
                     },
 
                     handleGesture: function(e) {
