--- a/sample/gestures.html
+++ b/sample/gestures.html
@@ -28,12 +28,13 @@
                 Bosonic.register({
                     listeners: {
                         'tap': 'handleGesture',
+                        'pan': 'handleGesture',
                         'swipe': 'handleGesture'
                     },
 
                     handleGesture: function(e) {
                         var gesture = e.type;
-                        if (gesture === 'swipe') gesture+= ' '+e.detail.direction;
+                        if (gesture === 'swipe' || gesture === 'pan') gesture+= ' '+e.detail.direction;
                         this.shadowRoot.querySelector('h1').innerHTML = gesture;
                         console.log(e.type, e.detail);
                     }
