Added track gesture and refactored the whole mixin

--- a/sample/gestures.html
+++ b/sample/gestures.html
@@ -28,6 +28,7 @@
                 Bosonic.register({
                     listeners: {
                         'tap': 'handleGesture',
+                        //'track': 'handleGesture',
                         'pan': 'handleGesture',
                         'swipe': 'handleGesture'
                     },
