The touch-action attribute required by PEPjs is now handled automatically by the gestures mixin

--- a/sample/gestures.html
+++ b/sample/gestures.html
@@ -43,7 +43,7 @@
             </script>
         </element>
 
-        <gestures-tests touch-action="none"></gestures-tests>
+        <gestures-tests></gestures-tests>
 
         <style>
         #log {
