--- a/test/mixins/events.html
+++ b/test/mixins/events.html
@@ -3,20 +3,20 @@
     <head>
         <title>Events</title>
         <meta charset="utf-8">
-        <script type="text/javascript" src="../node_modules/webcomponents.js/webcomponents.js"></script>
-        <script type="text/javascript" src="../dist/bosonic-runtime.js"></script>
+        <script type="text/javascript" src="../../node_modules/webcomponents.js/webcomponents.js"></script>
+        <script type="text/javascript" src="../../dist/bosonic-runtime.js"></script>
 
-        <script src="../node_modules/web-component-tester/browser.js"></script>
-        <script src="../bower_components/test-fixture/test-fixture-mocha.js"></script>
+        <script src="../../node_modules/web-component-tester/browser.js"></script>
+        <script src="../../bower_components/test-fixture/test-fixture-mocha.js"></script>
         
         <!-- This import is here because MockInteractions doesn't declare its dep to Polymer.Base
              TODO: remove this when https://github.com/PolymerElements/iron-test-helpers/pull/16 gets fixed -->
-        <link rel="import" href="../bower_components/polymer/polymer.html">
-        <script src="../bower_components/iron-test-helpers/mock-interactions.js"></script>
+        <link rel="import" href="../../bower_components/polymer/polymer.html">
+        <script src="../../bower_components/iron-test-helpers/mock-interactions.js"></script>
 
-        <link rel="import" href="../bower_components/test-fixture/test-fixture.html">
+        <link rel="import" href="../../bower_components/test-fixture/test-fixture.html">
         
-        <link rel="import" href="../sample/test-elements/events-element.html">
+        <link rel="import" href="fixtures/events.html">
     </head>
 
     <body>
