--- a/test/runtime/attribute-changed.html
+++ b/test/runtime/attribute-changed.html
@@ -3,15 +3,15 @@
     <head>
         <title>Attribute changed</title>
         <meta charset="utf-8">
-        <script type="text/javascript" src="../node_modules/webcomponents.js/webcomponents.js"></script>
-        <script type="text/javascript" src="../dist/bosonic-runtime.js"></script>
+        <script type="text/javascript" src="../../node_modules/webcomponents.js/webcomponents.js"></script>
+        <script type="text/javascript" src="../../dist/bosonic-runtime.js"></script>
 
-        <script src="../node_modules/web-component-tester/browser.js"></script>
-        <script src="../bower_components/test-fixture/test-fixture-mocha.js"></script>
+        <script src="../../node_modules/web-component-tester/browser.js"></script>
+        <script src="../../bower_components/test-fixture/test-fixture-mocha.js"></script>
 
-        <link rel="import" href="../bower_components/test-fixture/test-fixture.html">
+        <link rel="import" href="../../bower_components/test-fixture/test-fixture.html">
         
-        <link rel="import" href="../sample/test-elements/attribute-changed.html">
+        <link rel="import" href="fixtures/attribute-changed.html">
     </head>
 
     <body>
