--- a/test/runtime/lifecycle-callbacks.html
+++ b/test/runtime/lifecycle-callbacks.html
@@ -3,12 +3,12 @@
     <head>
         <title>Lifecycle callbacks</title>
         <meta charset="utf-8">
-        <script type="text/javascript" src="../node_modules/webcomponents.js/webcomponents.js"></script>
-        <script type="text/javascript" src="../dist/bosonic-runtime.js"></script>
+        <script type="text/javascript" src="../../node_modules/webcomponents.js/webcomponents.js"></script>
+        <script type="text/javascript" src="../../dist/bosonic-runtime.js"></script>
 
-        <script src="../node_modules/web-component-tester/browser.js"></script>
+        <script src="../../node_modules/web-component-tester/browser.js"></script>
         
-        <link rel="import" href="../sample/test-elements/callbacks.html">
+        <link rel="import" href="fixtures/callbacks.html">
     </head>
 
     <body>
