Imported b-dialog tests

--- a/test/index.html
+++ b/test/index.html
@@ -13,9 +13,12 @@
                 'runtime/childlist-changed.html',
                 'runtime/lifecycle-callbacks.html',
                 'runtime/mixins.html',
+
                 'mixins/custom-attributes.html',
                 'mixins/dom.html',
-                'mixins/events.html'
+                'mixins/events.html',
+
+                'elements/b-dialog.html'
             ]);
         </script>
     </body>
