Added b-notification tests

--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,8 @@
                 'mixins/dom.html',
                 'mixins/events.html',
 
-                'elements/b-dialog.html'
+                'elements/b-dialog.html',
+                'elements/b-notification.html'
             ]);
         </script>
     </body>
