Enhanced b-controlgroup doc

--- a/demo/b-controlgroup.html
+++ b/demo/b-controlgroup.html
@@ -12,19 +12,23 @@
     </head>
 
     <body>
-        <b-controlgroup>
-            <button class="b-button">Left</button>
-            <button class="b-button">Center</button>
-            <button class="b-button">Right</button>
-        </b-controlgroup>
-
-        <b-controlgroup vertical>
-            <button class="b-button">Top</button>
-            <button class="b-button">Middle</button>
-            <button class="b-button">Bottom</button>
-        </b-controlgroup>
+        <div class="element-demo" id="example1">
+            <b-controlgroup>
+                <button class="b-button">Left</button>
+                <button class="b-button">Center</button>
+                <button class="b-button">Right</button>
+            </b-controlgroup>
+        </div>
 
         <div class="element-demo" id="example2">
+            <b-controlgroup vertical>
+                <button class="b-button">Top</button>
+                <button class="b-button">Middle</button>
+                <button class="b-button">Bottom</button>
+            </b-controlgroup>
+        </div>
+
+        <div class="element-demo" id="example3">
             <b-controlgroup>
                 <label class="b-button">
                     <input type="checkbox" autocomplete="off" checked> Checkbox 1
@@ -38,7 +42,7 @@
             </b-controlgroup>
         </div>
 
-        <div class="element-demo" id="example1">
+        <div class="element-demo" id="example4">
             <b-controlgroup>
                 <label class="b-button">
                     <input type="radio" autocomplete="off" checked> Radio 1
