Small fix: the 'on' class must be added to the switch container, not the input

--- a/src/elements/b-switch.html
+++ b/src/elements/b-switch.html
@@ -144,7 +144,7 @@
                 },
 
                 toggleSwitch: function(value) {
-                    this.toggleClass('on', value);
+                    this.toggleClass('on', value, this.root);
                     this.toggleClass('on', value, this.root.querySelector('.b-switch'));
                 }
             });
