--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,8 @@
                 'mixins/events.html',
 
                 'elements/b-dialog.html',
-                'elements/b-notification.html'
+                'elements/b-notification.html',
+                'elements/b-switch.html'
             ]);
         </script>
     </body>
