Changed is-removable attribute to removable in order to conform to the spec

--- a/src/elements/b-panel.html
+++ b/src/elements/b-panel.html
@@ -32,7 +32,7 @@
         (function(){
             Bosonic.register({
                 createdCallback: function() {
-                    if (this.hasCustomAttribute('is-removable')) this.inject(Bosonic.Removable);
+                    if (this.hasCustomAttribute('removable')) this.inject(Bosonic.Removable);
                 }
             });
         })();
